Tests/bad/general/add002.lat

int f(int x) {
  printString("A teraz...");
  return x+1;
}

int main() {
    if(f(2)<2){
        string x="Kubito ma kota";
    }

    return 0; 
}